# DIAZI-GNN

./: .env  .gitignore  README.md  default.nix  dev.ipynb  podman-compose.yml  pyproject.toml  queries.cypher
data/: 20230811_TurningMachineLayout_2min_StatisticsModule-1-3-29.json  without_cam.json
gnn/: data_loader.py  json_graph_loader.py
